# cc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile
sources/: main.cpp
